<resources>
    <string name="app_name">Course_Mobile_3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_galary">Galary</string>

    <string name="menu_home">Home</string>
    <string name="menu_friends">Friends</string>
    <string name="menu_files">Files</string>

    <string name="Explorer">EXPLORER</string>
    <string name="welcome">Welcome to the OnCode</string>
    <string name="simple">It’s simple text editor!</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="RepeatPassword">Repeat password</string>
    <string name="SignUp">Sign up</string>
    <string name="FullName">Full name</string>
    <string name="Nickname">Nickname</string>
    <string name="EnterFullname">Enter you\'re full name</string>
    <string name="UniqueNick">Enter a unique nickname</string>
    <string name="PersonalInfo">Personal info</string>
    <string name="SignIn">Sign in</string>
    <string name="Registered">You are registered?</string>
    <string name="Logout">Logout</string>
</resources>