<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="245dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/portrain_personal_bg" />

    <ImageButton
        android:id="@+id/next"
        android:contentDescription="@string/UniqueNick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="29dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:srcCompat="@drawable/portrain_btn_next" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/fira_code_medium"
        android:text="@string/PersonalInfo"
        android:textColor="@color/white"
        android:textSize="20sp"

        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <EditText
        android:id="@+id/fullname"
        android:layout_width="300dp"
        android:layout_height="47dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="21dp"
        android:background="@drawable/form_bg"
        android:ems="10"
        android:fontFamily="@font/fira_mono"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingEnd="5dp"
        android:hint="@string/FullName"
        android:textColor="@color/textcolor"
        android:textColorHint="@color/textcolor"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/fira_code_light"
        android:gravity="start"
        android:text="@string/EnterFullname"
        android:textColor="@color/textcolor"
        app:layout_constraintStart_toStartOf="@+id/fullname"
        app:layout_constraintTop_toBottomOf="@+id/fullname" />

    <EditText
        android:id="@+id/nickname"
        android:layout_width="300dp"
        android:layout_height="47dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="21dp"
        android:background="@drawable/form_bg"
        android:ems="10"
        android:fontFamily="@font/fira_mono"
        android:inputType="text"
        android:paddingStart="20dp"

        android:paddingEnd="5dp"
        android:hint="@string/Nickname"
        android:textColor="@color/textcolor"
        android:textColorHint="@color/textcolor"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/fira_code_light"
        android:gravity="start"
        android:text="@string/UniqueNick"
        android:textColor="@color/textcolor"
        app:layout_constraintStart_toStartOf="@+id/nickname"
        app:layout_constraintTop_toBottomOf="@+id/nickname" />

</androidx.constraintlayout.widget.ConstraintLayout>